# geoip-firewall

./: README.md  install_debian.sh  install_rhel.sh  pyproject.toml
config/: logrotate-geoip  rsyslog-geoip.conf
src/proxmox_geoip_firewall/: __init__.py  main.py
