[project]
name = "linux-geoip-firewall"
version = "2.0.0"
description = "GeoIP-based firewall using ipset and iptables"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "maxminddb",
]

[project.scripts]
geoip-update = "proxmox_geoip_firewall.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmox_geoip_firewall"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
